--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,11 @@
  /* footer */
  footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: black;
     color: blanchedalmond;
+    font-weight: bold;
   }
 
 
