--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,13 +1,18 @@
  /* footer */
  footer {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 80px;
+    justify-content: center;
     background-color: black;
-    color: blanchedalmond;
-    font-weight: bold;
+    color: white;
+    
+    
+
   }
 
+  .footer_center{
+      text-align: center;
+  }
 
 
  
