--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    color: black;
+}
 .name-board{
     position: relative;
     margin-top: 200px;
@@ -5,17 +11,6 @@
     justify-content: center;
 }
 .name-board h1{
-    position: absolute;
-    z-index: -1;
-    top: -100px;
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%,5%);
-    background-color: rgb(102, 67, 2);
-    border-radius: 50%;
-    width: 300px;
-    height: 200px; 
-    padding-top: 40px;
     font-size: 25px;
 }
 .board{
@@ -29,35 +24,55 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: rgb(102, 67, 2);
     width: 85%;
     height: auto;
-    border-radius: 10px;
     padding-top: 50px;
     box-sizing: border-box;
 }
 .board article {
     position: relative;
     width: 100%;
-    max-width: 333px;
+    max-width: 320px;
     min-width: 162px;
-    padding: 20px;
-    margin: 12px 15px 26px;
-    background-color: burlywood;
-    border-radius: 5px;
-  }
-.board article img{
-    border-radius: 5px;
+    margin: 20px 15px 30px;
 }
-.board article .date {
+.article{
+    display: flex;
+    justify-content: center;
+}
+.board article:hover{
+    box-shadow: 0 0 10px gray;
+}
+.board article .articleBox{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    min-width: 132px;
+    margin: 0 auto;
+} 
+.board article .articleBox .date {
     font-size: 18px;
     font-weight: bold;
     letter-spacing: .04pm;
     margin: 16px 0 8px 0;
 }
-.board article .text {
+.board article .articleBox .text {
     font-size: 14px;
     line-height: 1.5;
     margin-bottom: 8px;
+    height: 150px;
     text-align: justify;
+}
+.board article .readMore{
+    font-size: 14px;
+    text-align: right;
+    vertical-align: bottom;
+}
+.board article .blackLine{
+    width: 17px;
+    height: 1px;
+    float: right;
+    background:black;
+    vertical-align: bottom;
+    margin-top: 10px;
 }
