--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -68,11 +68,16 @@
     text-align: right;
     vertical-align: bottom;
 }
+.board article .readMore{
+    font-size: 14px;
+    text-align: right;
+    vertical-align: bottom;
+}
 .board article .blackLine{
     width: 17px;
     height: 1px;
     float: right;
     background:black;
-    vertical-align: bottom;
     margin-top: 10px;
+    margin-right: 10px;
 }
