--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 #navbarsExample08{margin-right: 30px;
                   font-weight: bold;}
 .main_slider{
-             width: 1020px;;
-             height:450px;
+             /* height:450px; */
              display: flex;
              justify-content: center;
             }
@@ -19,3 +18,47 @@
 .sub_explanation{margin-left: 150px;
                  margin-top: 10px;
                 font-size: 25px;}
+.subtitle_fix{display: none;}
+
+@media screen and (max-width: 767px) 
+    {
+      .logo{position: absolute;
+            text-align: center;
+            width: 40%;
+            top: -80%;
+            left: 30%;
+            }
+                    
+      .main_slider{
+                max-width: 100%;
+                margin-top: 280px;
+                }
+
+       .main_image{
+                   padding-top: 10px;
+                   max-width: 100%;
+                  }
+        
+       .text_image{top:40px;
+                   left: 20px;
+                    max-width: 65%;
+                  }
+                   
+      .sub-container{display: flex;
+                     justify-content: center;
+                     max-width: 100%;}         
+
+      .sub_explanation{text-align: center;
+                       max-width: 100%;
+                       margin-left: 0; }
+                       
+      .subtitle_fix{display: block;}
+
+
+
+
+
+
+
+
+    }
