--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -69,6 +69,8 @@
     vertical-align: bottom;
 }
 .board article .readMore{
+    position: relative;
+    z-index: 9999;
     font-size: 14px;
     text-align: right;
     vertical-align: bottom;
@@ -77,7 +79,11 @@
     width: 17px;
     height: 1px;
     float: right;
-    background:black;
-    margin-top: 10px;
-    margin-right: 10px;
+    background: black;
+    margin: 10px 10px 10px 0;
+    transition: 0.5s;
+}
+.board article .blackLine.active{
+    width: 90px;
+    transition: 0.5s;
 }
