--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -5,6 +5,8 @@
     justify-content: center;
     background-color: black;
     color: white;
+    justify-content: space-between;
+  align-items: center;
     
     
 
