--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,32 +8,34 @@
 .container{margin-top: 20px;}
 
 .logo{position: absolute;
-      top: -70px;
-      left: -50px;}
+      top: 5%;
+      left: 8%;}
 .text_image{
             position: absolute;
-            top: 238px;
-            right: -15px;
+            top: 37%;
+            right: 10%;
             }
 .sub_explanation{margin-left: 150px;
                  margin-top: 10px;
                 font-size: 25px;}
 .subtitle_fix{display: none;}
 
+
+
 @media screen and (max-width: 767px) 
     {
       .logo{position: absolute;
             text-align: center;
-            width: 50%;
-            top: -80%;
-            left: 25%;
+            max-width: 40%;
+            top: 20px;
+            left: 27%;
             }
       
       .navbar-toggler{background-color: black;}
 
       .main_slider{
                 max-width: 100%;
-                margin-top: 280px;
+                margin-top: 200px;
                 }
 
        .main_image{
@@ -41,9 +43,10 @@
                    max-width: 100%;
                   }
         
-       .text_image{top:40px;
-                   left: 20px;
-                    max-width: 65%;
+       .text_image{
+                   top:280px;
+                   left:10%;
+                   max-width: 55%;
                   }
                    
       .sub-container{display: flex;
@@ -55,12 +58,5 @@
                        margin-left: 0; }
 
       .subtitle_fix{display: block;}
-
-
-
-
-
-
-
 
     }
