--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,10 +1,16 @@
 *{
     padding: 0;
     margin: 0;
-    
-    
-    
 }
+/* ヘッダー */
+nav ul{
+    display: flex;
+}
+nav ul li{
+    margin-left: 15px;
+}
+
+/* ブログ */
 .name-board{
     position: relative;
     margin-top: 20px;
