--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -2,7 +2,13 @@
      display:flex;
      justify-content: center;
      align-items: center;
-    
-    margin: 0 auto;
+     margin: 0 auto;
+     font-weight: bold;
 }
 
+.post_content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
