--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@
       
       .navbar-toggler{background-color: black;}
 
-      .main_slider{
+      .swiper-container{
                 max-width: 100%;
                 margin-top: 200px;
                 }
@@ -47,6 +47,7 @@
        .main_image{
                    padding-top: 30px;
                    max-width: 100%;
+                   /* max-height: 80%; */
                   }
         
        .text_image{
