--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,24 +2,31 @@
                   font-weight: bold;}
 
 .slider_div{
-             /* height:450px; */
-             /* display: flex;
-             justify-content: center; */
-             /* position: relative; */
+             position: relative;
              margin-top: 60px;
             }
+
 .swiper-slide{display: flex;
               justify-content: center;}
 
 .logo{position: absolute;
       top: -90px;
       left: 8%;
-      max-width: 100%;}
+      max-width: 100%;
+      z-index: 10;}
+
+.main_image{
+      padding-top: 30px;
+      max-width: 100%;
+      /* max-height: 80%; */
+      }
+
 .text_image{
             position: absolute;
-            top: 235px;
+            top: 265px;
             right: 10%;
             max-width: 100%;
+            z-index: 12;
             }
 .sub_explanation{margin-left: 150px;
                  margin-top: 10px;
@@ -33,8 +40,8 @@
       .logo{position: absolute;
             text-align: center;
             max-width: 40%;
-            top: -200px;
-            left: 27%;
+            top: -40%;
+            left: 28%;
             }
       
       .navbar-toggler{background-color: black;}
